--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -203,6 +203,20 @@ jobs:
             vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes BRANCH=edge"
             buildFirst: uefi-arm64-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
 
+          - aa: 0060
+            board: uefi-arm64
+            desc: UEFI Generic ARM64, with Armbian pure mainline kernel (edge), regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-rootfs-only
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
+          - aa: 0070
+            board: rpi4b
+            desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
           - aa: 0100
             board: uefi-x86-meta
             desc: UEFI Generic x86 cloud image, with Armbian pure mainline kernel (edge), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
@@ -210,19 +224,19 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
-          - aa: 0150
-            board: uefi-x86-meta
-            desc: UEFI Generic x86 cloud image, with -generic Ubuntu kernel (current), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
-            runnerLabel: can-build-x86
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes BRANCH=current"
-
-          - aa: 0200
+          - aa: 0120
             board: uefi-x86
             desc: UEFI Generic x86, with Armbian pure mainline kernel (edge), regular CLI
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
+
+          - aa: 0130
+            board: rpi4b
+            desc: Raspberry Pi 4B, with Ubuntu's raspi kernel (current), regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-rootfs-only
+            vars: "CLOUD_IMAGE=no BRANCH=current"
 
           - aa: 0250
             board: uefi-x86
@@ -231,13 +245,12 @@ jobs:
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=current"
 
-
-          - aa: 0300
-            board: rpi4b
-            desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
+          - aa: 0150
+            board: uefi-x86-meta
+            desc: UEFI Generic x86 cloud image, with -generic Ubuntu kernel (current), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
+            runnerLabel: can-build-x86
+            runnerLabelKernel: can-build-rootfs-only
+            vars: "CLOUD_IMAGE=yes BRANCH=current"
 
           - aa: 0350
             board: rpi4b
@@ -246,14 +259,6 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
-
-          - aa: 0400
-            board: rpi4b
-            desc: Raspberry Pi 4B, with Ubuntu's raspi kernel (current), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
           - aa: 0450
             board: rpi4b
             desc: Raspberry Pi 4B, using Ubuntu's raspi kernel (current), cloud image, user-data at /boot/firmware (FAT)
@@ -261,20 +266,12 @@ jobs:
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes BRANCH=current"
 
-
           - aa: 0720
             board: uefi-arm64
             desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), cloud image, user-data at /boot/efi (FAT)
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes BRANCH=current"
-
-          - aa: 0730
-            board: uefi-arm64
-            desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no BRANCH=current"
 
           - aa: 0740
             board: uefi-arm64-dual-root
