--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -204,7 +204,7 @@ jobs:
             board: uefi-arm64
             desc: UEFI Generic ARM64, with Armbian mainline kernel (edge), regular CLI
             runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
+            runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0070
